# routes/api.php
@@ -1,6 +1,17 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\AuthController;
+use App\Http\Controllers\KategoriController;
+use App\Http\Middleware\CustomJWTMiddleware;
+Route::post('login', [AuthController::class, 'login']);
+Route::post('register', [AuthController::class, 'register']);
+Route::post('logout', [AuthController::class, 'logout'])->middleware('auth:api');
+Route::middleware([CustomJWTMiddleware::class])->group(function () {
+    Route::apiResource('kategori', KategoriController::class);
+});
+
+
 
 // KAMIS
 // use App\Http\Controllers\ProdukController;
@@ -16,13 +27,13 @@ use App\Http\Controllers\CustomerController;
 Route::apiResource('/customer', CustomerController::class);
 
 //JUMAT
-use App\Http\Controllers\KategoriController;
+// use App\Http\Controllers\KategoriController;
 
-Route::apiResource('/kategori', KategoriController::class);
+// Route::apiResource('/kategori', KategoriController::class);
 
 use App\Http\Controllers\ProdukController;
 
 Route::get('/produk/search', [ProdukController::class, 'search']);
+Route::get('/produk/filterHarga', [ProdukController::class,  'filterHarga']);
 Route::apiResource('/produk', ProdukController::class);
-Route::post('/produk/moreThan', [ProdukController::class,  'moreThan']);
 
